@@ -1,0 +1,61 @@
+#!/bin/sh
+
+#
+# Program: biotype_vega.config
+#
+# Purpose:
+#
+#   Configuration file for BioTypes : VEGA
+#
+# History:
+#
+# 10/21/2015    lec     
+#       - TR12070/TR112116/biotype
+#
+
+cd `dirname $0` 
+
+RUNTIME_DIR="${DATALOADSOUTPUT}/mgi/vocload/runTimeBiotype/vega"
+ARCHIVE_DIR="${DATALOADSOUTPUT}/mgi/vocload/archiveBiotype"
+
+export RUNTIME_DIR
+export ARCHIVE_DIR
+
+LOAD_PROGRAM="biotype.py ${LOAD_PROGRAM}"
+export LOAD_PROGRAM
+
+case `uname -n` in
+bhmgidevapp01) MAINTAINER="mgiadmin";;
+mgi-testdb4) MAINTAINER="lori.corbani@jax.org";;
+*) MAINTAINER="mgiadmin";;
+esac
+export MAINTAINER
+
+# vocabulary attributes:
+
+VOCAB_NAME="BioType VEGA"
+VOCAB_COMMENT_KEY=0
+JNUM="J:109762"
+IS_SIMPLE=1
+IS_PRIVATE=0
+LOGICALDB_KEY=1
+ANNOT_TYPE_KEY=0
+
+export VOCAB_NAME
+export VOCAB_COMMENT_KEY
+export JNUM
+export IS_SIMPLE
+export IS_PRIVATE
+export LOGICALDB_KEY
+export ANNOT_TYPE_KEY
+
+BIOTYPE_FILE="${DATALOADSOUTPUT}/mgi/biotypemapload/input/vega.txt"
+DATA_FILE="${RUNTIME_DIR}/biotype.tab"
+TERM_FILE="${RUNTIME_DIR}/Termfile"
+DAG_ROOT_ID=""
+
+export BIOTYPE_FILE
+export DATA_FILE
+export TERM_FILE
+export DAG_ROOT_ID
+
